--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
     font-size: 14px;
     font-family: Roboto, Arial, Helvetica, sans-serif;
+    margin-bottom: 50px;
 }
 
 /*#header {
@@ -129,6 +130,32 @@ button{
     text-align: center;
     cursor: pointer;
     user-select: none;
-    /*justify-content: center;
-   
+    /*justify-content: center;*/
 }
+.list-item-right{
+    float: right;
+    
+}
+    .nav-footer{
+        position: fixed;
+        bottom: 25px;
+        left: 0px;
+        width: 100%;
+
+    }
+    nav ul {
+        list-style-type: none;
+        text-align: center;
+        width: 100%;
+        margin-bottom: 0px;
+      }
+      nav li {
+           
+          display: block;
+          padding: 8px;
+          background-color: #dddddd;
+          position: relative;
+          float: left;
+          
+      }
+  
